# SPDownloader

./: .cache  .env.example  .flake8  .gitignore  Pipfile  README.md  pyproject.toml  records.json  requirements.txt  setup.py  spdownloader.py  tracks.schema.json
.github/workflows/: python-app.yml
modules/: .cache  banner.py  color.py  convert.py  cred.py  download_thread.py  manage_spotify.py  metadata.py  prova.py  spotify.py
