[tool.poetry]
name = "spdownload"
version = "0.1.0"
description = ""
authors = [
    "rickystar04 <rickybenincasa04@gmail.com> ",
    "naviamold <89490126+Naviamold1@users.noreply.github.com> ",
]
license = "GGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spotipy = "^2.23.0"
eyed3 = "^0.9.7"
yt-dlp = "^2023.7.6"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8-length = "^0.3.1"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
